--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,6 @@
 # Configure base URL. if using gh-pages https://github.com/<username>/hugo-dpsg URL: https://<username>.github.io/hugo-dpsg/
 baseurl = "https://pfadfinder-konstanz.github.io/hugo-dpsg/"
-title = "Hugo DPSG"
+title = "怕水的鱼"
 paginate = "10" # Number of posts per page
 theme = "hugo-dpsg"
 # Change/remove themesDir, the current location is for deploying the demo page only
@@ -43,8 +43,8 @@ DefaultContentLanguage = "en"
 [Params.logo]
   image = "img/placeholder.png" # Logo image. Path relative to "static"
   header = "img/header.jpg" # Header image. Path relative to "static"
-  title = "Hugo DPSG" # Logo title, otherwise will use site title
-  subtitle = "Welcome to our group site" # Logo subtitle
+  title = "怕水的鱼" # Logo title, otherwise will use site title
+  subtitle = "Welcome to my blog" # Logo subtitle
 
 [Params.sidebar]
   home = "right" # Configure layout for home page
@@ -64,9 +64,9 @@ DefaultContentLanguage = "en"
   right = "[Donate!](/)" # Right-aligned text in footer row, understands markdown
 
 # Custom menu items, normally controlled via front matter in /content files
-[menu]
-  [[menu.main]]
-    identifier = "login"
-    name = "External Login"
-    url = "https://example.com/login"
-    weight = 99
+# [menu]
+#   [[menu.main]]
+#     identifier = "login"
+#     name = "External Login"
+#     url = "https://example.com/login"
+#     weight = 99
