--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -31,6 +31,8 @@ DefaultContentLanguage = "en"
   customJS = [] # Include custom JS files
   # customPartial = "analytics.html" # Include custom partial at the end of the page
   # belowTitlePartial = "banner.html" # Include custom partial below the pages title
+  # qrcode.jpg
+  qrcodes = [{ image = "img/qrcode.jpg", alt = "WeChat QR Code" },]
 
 [Params.Author] # Used in authorbox
   name = "Scout Master"
@@ -51,7 +53,7 @@ DefaultContentLanguage = "en"
   list = "left"  # Configure layout for list pages
   single = false # Configure layout for single pages
   # Enable widgets in given order
-  widgets = ["search", "recent", "categories", "taglist", "social", "languages"]
+  widgets = ["search", "recent", "categories", "taglist", "social", "languages", "qrcodes"]
   # alternatively "ddg-search" can be used, to search via DuckDuckGo
   # widgets = ["ddg-search", "recent", "categories", "taglist", "social", "languages"]
 
